src/bParser.cpp

// Generated from b.g4 by ANTLR 4.13.0


#include "bListener.h"
#include "bVisitor.h"

#include "bParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct BParserStaticData final {
  BParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BParserStaticData(const BParserStaticData&) = delete;
  BParserStaticData(BParserStaticData&&) = delete;
  BParserStaticData& operator=(const BParserStaticData&) = delete;
  BParserStaticData& operator=(BParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag bParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
BParserStaticData *bParserStaticData = nullptr;

void bParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (bParserStaticData != nullptr) {
    return;
  }
#else
  assert(bParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<BParserStaticData>(
    std::vector<std::string>{
      "program", "definition", "ival", "statement", "nullstmt", "expressionstmt", 
      "blockstmt", "returnstmt", "gotostmt", "switchstmt", "whilestmt", 
      "ifstmt", "casestmt", "externsmt", "autosmt", "rvalue", "ternary", 
      "comparison", "assignment", "expression", "functioninvocation", "functionparameters", 
      "assign", "incdec", "unary", "binary", "lvalue", "constant", "name"
    },
    std::vector<std::string>{
      "", "','", "';'", "'('", "')'", "':'", "'{'", "'}'", "'return'", "'goto'", 
      "'switch'", "'while'", "'if'", "'else'", "'case'", "'extrn'", "'auto'", 
      "'\\u003F'", "'&'", "'='", "'++'", "'--'", "'-'", "'!'", "'|'", "'=='", 
      "'!='", "'<'", "'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", "'%'", 
      "'*'", "'/'", "'['", "']'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "NAME", "INT", "STRING1", "STRING2", "BLOCKCOMMENT", 
      "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  bParserStaticData = staticData.release();
}

}

bParser::bParser(TokenStream *input) : bParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

bParser::bParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  bParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *bParserStaticData->atn, bParserStaticData->decisionToDFA, bParserStaticData->sharedContextCache, options);
}

bParser::~bParser() {
  delete _interpreter;
}

const atn::ATN& bParser::getATN() const {
  return *bParserStaticData->atn;
}

std::string bParser::getGrammarFileName() const {
  return "b.g4";
}

const std::vector<std::string>& bParser::getRuleNames() const {
  return bParserStaticData->ruleNames;
}

const dfa::Vocabulary& bParser::getVocabulary() const {
  return bParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView bParser::getSerializedATN() const {
  return bParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

bParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bParser::ProgramContext::EOF() {
  return getToken(bParser::EOF, 0);
}

std::vector<bParser::DefinitionContext *> bParser::ProgramContext::definition() {
  return getRuleContexts<bParser::DefinitionContext>();
}

bParser::DefinitionContext* bParser::ProgramContext::definition(size_t i) {
  return getRuleContext<bParser::DefinitionContext>(i);
}


size_t bParser::ProgramContext::getRuleIndex() const {
  return bParser::RuleProgram;
}

void bParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void bParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any bParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

bParser::ProgramContext* bParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, bParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == bParser::NAME) {
      setState(58);
      definition();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(64);
    match(bParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinitionContext ------------------------------------------------------------------

bParser::DefinitionContext::DefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<bParser::NameContext *> bParser::DefinitionContext::name() {
  return getRuleContexts<bParser::NameContext>();
}

bParser::NameContext* bParser::DefinitionContext::name(size_t i) {
  return getRuleContext<bParser::NameContext>(i);
}

bParser::ConstantContext* bParser::DefinitionContext::constant() {
  return getRuleContext<bParser::ConstantContext>(0);
}

std::vector<bParser::IvalContext *> bParser::DefinitionContext::ival() {
  return getRuleContexts<bParser::IvalContext>();
}

bParser::IvalContext* bParser::DefinitionContext::ival(size_t i) {
  return getRuleContext<bParser::IvalContext>(i);
}

bParser::StatementContext* bParser::DefinitionContext::statement() {
  return getRuleContext<bParser::StatementContext>(0);
}


size_t bParser::DefinitionContext::getRuleIndex() const {
  return bParser::RuleDefinition;
}

void bParser::DefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefinition(this);
}

void bParser::DefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefinition(this);
}


std::any bParser::DefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bVisitor*>(visitor))
    return parserVisitor->visitDefinition(this);
  else
    return visitor->visitChildren(this);
}

bParser::DefinitionContext* bParser::definition() {
  DefinitionContext *_localctx = _tracker.createInstance<DefinitionContext>(_ctx, getState());
  enterRule(_localctx, 2, bParser::RuleDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(100);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(66);
      name();
      setState(68);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
      case 1: {
        setState(67);
        constant();
        break;
      }

      default:
        break;
      }
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 8246337208320) != 0)) {
        setState(70);
        ival();
        setState(75);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == bParser::T__0) {
          setState(71);
          match(bParser::T__0);
          setState(72);
          ival();
          setState(77);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(82);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(83);
      match(bParser::T__1);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(85);
      name();
      setState(86);
      match(bParser::T__2);
      setState(95);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == bParser::NAME) {
        setState(87);
        name();
        setState(92);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == bParser::T__0) {
          setState(88);
          match(bParser::T__0);
          setState(89);
          name();
          setState(94);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(97);
      match(bParser::T__3);
      setState(98);
      statement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IvalContext ------------------------------------------------------------------

bParser::IvalContext::IvalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bParser::ConstantContext* bParser::IvalContext::constant() {
  return getRuleContext<bParser::ConstantContext>(0);
}

bParser::NameContext* bParser::IvalContext::name() {
  return getRuleContext<bParser::NameContext>(0);
}


size_t bParser::IvalContext::getRuleIndex() const {
  return bParser::RuleIval;
}

void bParser::IvalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIval(this);
}

void bParser::IvalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIval(this);
}


std::any bParser::IvalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bVisitor*>(visitor))
    return parserVisitor->visitIval(this);
  else
    return visitor->visitChildren(this);
}

bParser::IvalContext* bParser::ival() {
  IvalContext *_localctx = _tracker.createInstance<IvalContext>(_ctx, getState());
  enterRule(_localctx, 4, bParser::RuleIval);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(104);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case bParser::INT:
      case bParser::STRING1:
      case bParser::STRING2: {
        enterOuterAlt(_localctx, 1);
        setState(102);
        constant();
        break;
      }

      case bParser::NAME: {
        enterOuterAlt(_localctx, 2);
        setState(103);
        name();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

bParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bParser::ExternsmtContext* bParser::StatementContext::externsmt() {
  return getRuleContext<bParser::ExternsmtContext>(0);
}

bParser::AutosmtContext* bParser::StatementContext::autosmt() {
  return getRuleContext<bParser::AutosmtContext>(0);
}

bParser::NameContext* bParser::StatementContext::name() {
  return getRuleContext<bParser::NameContext>(0);
}

bParser::StatementContext* bParser::StatementContext::statement() {
  return getRuleContext<bParser::StatementContext>(0);
}

bParser::CasestmtContext* bParser::StatementContext::casestmt() {
  return getRuleContext<bParser::CasestmtContext>(0);
}

bParser::BlockstmtContext* bParser::StatementContext::blockstmt() {
  return getRuleContext<bParser::BlockstmtContext>(0);
}

bParser::IfstmtContext* bParser::StatementContext::ifstmt() {
  return getRuleContext<bParser::IfstmtContext>(0);
}

bParser::WhilestmtContext* bParser::StatementContext::whilestmt() {
  return getRuleContext<bParser::WhilestmtContext>(0);
}

bParser::SwitchstmtContext* bParser::StatementContext::switchstmt() {
  return getRuleContext<bParser::SwitchstmtContext>(0);
}

bParser::GotostmtContext* bParser::StatementContext::gotostmt() {
  return getRuleContext<bParser::GotostmtContext>(0);
}

bParser::ReturnstmtContext* bParser::StatementContext::returnstmt() {
  return getRuleContext<bParser::ReturnstmtContext>(0);
}

bParser::ExpressionstmtContext* bParser::StatementContext::expressionstmt() {
  return getRuleContext<bParser::ExpressionstmtContext>(0);
}

bParser::NullstmtContext* bParser::StatementContext::nullstmt() {
  return getRuleContext<bParser::NullstmtContext>(0);
}


size_t bParser::StatementContext::getRuleIndex() const {
  return bParser::RuleStatement;
}

void bParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void bParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any bParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

bParser::StatementContext* bParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, bParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(121);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(106);
      externsmt();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(107);
      autosmt();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(108);
      name();
      setState(109);
      match(bParser::T__4);
      setState(110);
      statement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(112);
      casestmt();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(113);
      blockstmt();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(114);
      ifstmt();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(115);
      whilestmt();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(116);
      switchstmt();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(117);
      gotostmt();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(118);
      returnstmt();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(119);
      expressionstmt();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(120);
      nullstmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NullstmtContext ------------------------------------------------------------------

bParser::NullstmtContext::NullstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t bParser::NullstmtContext::getRuleIndex() const {
  return bParser::RuleNullstmt;
}

void bParser::NullstmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNullstmt(this);
}

void bParser::NullstmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNullstmt(this);
}


std::any bParser::NullstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bVisitor*>(visitor))
    return parserVisitor->visitNullstmt(this);
  else
    return visitor->visitChildren(this);
}

bParser::NullstmtContext* bParser::nullstmt() {
  NullstmtContext *_localctx = _tracker.createInstance<NullstmtContext>(_ctx, getState());
  enterRule(_localctx, 8, bParser::RuleNullstmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123);
    match(bParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionstmtContext ------------------------------------------------------------------

bParser::ExpressionstmtContext::ExpressionstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bParser::RvalueContext* bParser::ExpressionstmtContext::rvalue() {
  return getRuleContext<bParser::RvalueContext>(0);
}


size_t bParser::ExpressionstmtContext::getRuleIndex() const {
  return bParser::RuleExpressionstmt;
}

void bParser::ExpressionstmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionstmt(this);
}

void bParser::ExpressionstmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionstmt(this);
}


std::any bParser::ExpressionstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bVisitor*>(visitor))
    return parserVisitor->visitExpressionstmt(this);
  else
    return visitor->visitChildren(this);
}

bParser::ExpressionstmtContext* bParser::expressionstmt() {
  ExpressionstmtContext *_localctx = _tracker.createInstance<ExpressionstmtContext>(_ctx, getState());
  enterRule(_localctx, 10, bParser::RuleExpressionstmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    rvalue();
    setState(126);
    match(bParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockstmtContext ------------------------------------------------------------------

bParser::BlockstmtContext::BlockstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<bParser::StatementContext *> bParser::BlockstmtContext::statement() {
  return getRuleContexts<bParser::StatementContext>();
}

bParser::StatementContext* bParser::BlockstmtContext::statement(size_t i) {
  return getRuleContext<bParser::StatementContext>(i);
}


size_t bParser::BlockstmtContext::getRuleIndex() const {
  return bParser::RuleBlockstmt;
}

void bParser::BlockstmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockstmt(this);
}

void bParser::BlockstmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockstmt(this);
}


std::any bParser::BlockstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bVisitor*>(visitor))
    return parserVisitor->visitBlockstmt(this);
  else
    return visitor->visitChildren(this);
}

bParser::BlockstmtContext* bParser::blockstmt() {
  BlockstmtContext *_localctx = _tracker.createInstance<BlockstmtContext>(_ctx, getState());
  enterRule(_localctx, 12, bParser::RuleBlockstmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    match(bParser::T__5);
    setState(132);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 8246353321804) != 0)) {
      setState(129);
      statement();
      setState(134);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(135);
    match(bParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnstmtContext ------------------------------------------------------------------

bParser::ReturnstmtContext::ReturnstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bParser::RvalueContext* bParser::ReturnstmtContext::rvalue() {
  return getRuleContext<bParser::RvalueContext>(0);
}


size_t bParser::ReturnstmtContext::getRuleIndex() const {
  return bParser::RuleReturnstmt;
}

void bParser::ReturnstmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnstmt(this);
}

void bParser::ReturnstmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnstmt(this);
}


std::any bParser::ReturnstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bVisitor*>(visitor))
    return parserVisitor->visitReturnstmt(this);
  else
    return visitor->visitChildren(this);
}

bParser::ReturnstmtContext* bParser::returnstmt() {
  ReturnstmtContext *_localctx = _tracker.createInstance<ReturnstmtContext>(_ctx, getState());
  enterRule(_localctx, 14, bParser::RuleReturnstmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(137);
    match(bParser::T__7);
    setState(142);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == bParser::T__2) {
      setState(138);
      match(bParser::T__2);
      setState(139);
      rvalue();
      setState(140);
      match(bParser::T__3);
    }
    setState(144);
    match(bParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GotostmtContext ------------------------------------------------------------------

bParser::GotostmtContext::GotostmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bParser::RvalueContext* bParser::GotostmtContext::rvalue() {
  return getRuleContext<bParser::RvalueContext>(0);
}


size_t bParser::GotostmtContext::getRuleIndex() const {
  return bParser::RuleGotostmt;
}

void bParser::GotostmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGotostmt(this);
}

void bParser::GotostmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGotostmt(this);
}


std::any bParser::GotostmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bVisitor*>(visitor))
    return parserVisitor->visitGotostmt(this);
  else
    return visitor->visitChildren(this);
}

bParser::GotostmtContext* bParser::gotostmt() {
  GotostmtContext *_localctx = _tracker.createInstance<GotostmtContext>(_ctx, getState());
  enterRule(_localctx, 16, bParser::RuleGotostmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(146);
    match(bParser::T__8);
    setState(147);
    rvalue();
    setState(148);
    match(bParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SwitchstmtContext ------------------------------------------------------------------

bParser::SwitchstmtContext::SwitchstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bParser::RvalueContext* bParser::SwitchstmtContext::rvalue() {
  return getRuleContext<bParser::RvalueContext>(0);
}

bParser::StatementContext* bParser::SwitchstmtContext::statement() {
  return getRuleContext<bParser::StatementContext>(0);
}


size_t bParser::SwitchstmtContext::getRuleIndex() const {
  return bParser::RuleSwitchstmt;
}

void bParser::SwitchstmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSwitchstmt(this);
}

void bParser::SwitchstmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSwitchstmt(this);
}


std::any bParser::SwitchstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bVisitor*>(visitor))
    return parserVisitor->visitSwitchstmt(this);
  else
    return visitor->visitChildren(this);
}

bParser::SwitchstmtContext* bParser::switchstmt() {
  SwitchstmtContext *_localctx = _tracker.createInstance<SwitchstmtContext>(_ctx, getState());
  enterRule(_localctx, 18, bParser::RuleSwitchstmt);
